--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   fluttertoast: ^8.2.8
   local_auth: ^2.3.0
   http: ^1.2.2
+  flutter_secure_storage: ^9.2.2
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
